css/style.css
* {
  font-family: monospace;
}

:root {
  --bg-color: #ffffff;
  --text-color: #000000;
}

[data-theme="dark"] {
  --bg-color: #000000;
  --text-color: #ffffff;
}

.bio {
  display: flex;
  flex-direction: column;
}

#socialnetworks {
  margin-top: auto;
}

.container {
  max-width: 1200px;
  width: 100%;
  margin: 0 auto;
  padding: 0 16px;
  box-sizing: border-box;
}

.thestory {
  white-space: pre-wrap;
}

.logo {
  align-items: center;
  text-align: center;
  position: relative;
}

.logo-text {
  transform: scale(1, 1);
  transform-origin: center;
  display: inline-block; /* нужно, чтобы transform применился корректно к inline-элементу типа h2 внутри текста */
}

.theme-toggle p{
  font-size: 14px;
  color: rgb(0, 166, 0);
  font-family: monospace;
}

.upside-down {
  transform: rotate(180deg);
  transition: transform 0.6s ease;
}

.theme-toggle {
  position: absolute;
  top: 50%;
  right: 16px; /* отступ от правого края контейнера */
  transform: translateY(-50%); /* точное центрирование по вертикали */
  background: none;
  color: var(--text-color);
  font-size: 18px;
  padding: 4px 10px;
  cursor: pointer;
  border-radius: 4px;
  transition: all 0.3s ease;
  appearance: none;        /* убирает нативный вид кнопки в целом */
  -webkit-appearance: none; /* для Safari */
  border: none;             /* убирает границу */
  outline: none;   
}

.links a{
  text-decoration: none;
}

.telegram{
  color: rgb(0, 149, 255);
}

.youtube{
  color: red;
}

.spotify{
  color: green
}

.steam{
  color: orange
}

.github{
  color: rgb(199, 56, 104)
}

.flex {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
}

body {
  margin: 0;
  background: #000000;
  color: rgb(0, 166, 0);
  font-family: monospace;
  transition: background-color 2s ease;
}

body.loaded {
  color: var(--text-color);
  background-color: var(--bg-color);
  transition: color 2s ease;
}

.footer{
  align-items: center;
  text-align: center;
}

.intro {
  position: fixed;
  inset: 0;
  padding: 24px;
  background: #000;
}

.hidden {
  display: none;
}

.hide {
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.5s ease;
}

#terminal::after {
  content: "▍";
  animation: blink 1s step-end infinite;
}

@keyframes blink {
  50% {
    opacity: 0;
  }
}

@media (max-width: 768px) {
  .flex {
    flex-direction: column; /* теперь друг под другом */
  }

  #ascii-output {
    font-size: 4px; /* меньше, чем на десктопе, чтобы поместилось */
    overflow-x: auto; /* на случай если строки всё равно длиннее экрана */
  }
}

